--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   hexcolor: ^2.0.7
   shared_preferences: ^2.0.15
+  responsive_framework: ^0.1.9
+  animated_splash_screen: ^1.3.0
+  flutter_expanded_tile: ^0.3.6
+  iconly: ^1.0.1
+  social_login_buttons: ^1.0.6+2
 
 
 dev_dependencies:
@@ -65,9 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -80,11 +84,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: HeadFont
+      fonts:
+        - asset: assets/fonts/Anton-Regular.ttf
+    - family: SubHead
+      fonts:
+        - asset: assets/fonts/Ubuntu-Regular.ttf
+
+
+
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
