--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   flutter_expanded_tile: ^0.3.6
   iconly: ^1.0.1
   social_login_buttons: ^1.0.6+2
+  google_sign_in: ^5.2.1
+  firebase_core: ^1.24.0
+  cloud_firestore: ^3.5.0
+  image_picker: ^0.8.5+3
+  path_provider: ^2.0.11
 
 
 dev_dependencies:
