--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   image_picker: ^0.8.5+3
   path_provider: ^2.0.11
   buttons_tabbar: ^1.3.6
+  conditional_builder_null_safety: ^0.0.6
 
 
 dev_dependencies:
