--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   path_provider: ^2.0.11
   buttons_tabbar: ^1.3.6
   conditional_builder_null_safety: ^0.0.6
+  dio: ^4.0.6
 
 
 dev_dependencies:
