--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   buttons_tabbar: ^1.3.6
   conditional_builder_null_safety: ^0.0.6
   dio: ^4.0.6
+  http: ^0.13.0
+  fluttertoast: ^8.0.8
 
 
 dev_dependencies:
