--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   dio: ^4.0.6
   http: ^0.13.0
   fluttertoast: ^8.0.8
+  jwt_decode: ^0.3.1
 
 
 dev_dependencies:
@@ -82,6 +83,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/logo.png
+     - assets/images/profileImage.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
