--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   http: ^0.13.0
   fluttertoast: ^8.0.8
   jwt_decode: ^0.3.1
+  full_screen_image_null_safe: ^2.0.0
 
 
 dev_dependencies:
