--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   confirm_dialog: ^1.0.1
   firebase_core_web: ^1.6.6
   firebase_database: ^9.1.7
+  modal_bottom_sheet: ^2.1.2
 
 
 dev_dependencies:
