time ago implement

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   firebase_core_web: ^1.6.6
   firebase_database: ^9.1.7
   modal_bottom_sheet: ^2.1.2
+  timeago: ^3.3.0
+  intl: ^0.17.0
 
 
 dev_dependencies:
