--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,20 +34,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  lottie: ^1.2.2
+  lottie: ^2.2.0
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
   curved_navigation_bar: ^1.0.3
-  hexcolor: ^2.0.7
+  hexcolor: ^3.0.1
   shared_preferences: ^2.0.15
-  responsive_framework: ^0.1.9
+  responsive_framework: ^0.2.0
   animated_splash_screen: ^1.3.0
   flutter_expanded_tile: ^0.3.6
   iconly: ^1.0.1
   social_login_buttons: ^1.0.6+2
   google_sign_in: ^5.2.1
-  firebase_core: ^1.24.0
-  cloud_firestore: ^3.5.0
+  cloud_firestore: ^4.3.1
   image_picker: ^0.8.5+3
   path_provider: ^2.0.11
   buttons_tabbar: ^1.3.6
@@ -58,11 +57,15 @@ dependencies:
   jwt_decode: ^0.3.1
   full_screen_image_null_safe: ^2.0.0
   confirm_dialog: ^1.0.1
-  firebase_core_web: ^1.6.6
-  firebase_database: ^9.1.7
+  firebase_core_web: ^2.1.0
+  firebase_database: ^10.0.9
   modal_bottom_sheet: ^2.1.2
   timeago: ^3.3.0
   intl: ^0.17.0
+  firebase_core: ^2.4.1
+  file_picker: ^4.1.3
+  open_file: ^3.2.1
+
 
 
 dev_dependencies:
@@ -74,7 +77,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
