--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   firebase_core: ^2.4.1
   file_picker: ^4.1.3
   open_file: ^3.2.1
+
 #
 
 
@@ -95,6 +96,7 @@ flutter:
   assets:
      - assets/images/logo.png
      - assets/images/profileImage.jpg
+     - assets/images/profile.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
